2007-05-16  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js: In the frame mousedown
	handler, call _content.focus() to give keyboard focus to the
	content, and send a FocusIn behind the scenes.  Also call
	_content.blur() on previously focused content to send FocusOut.

	* compzilla/chrome/content/content.js: Set tabIndex="1" so the
	content can be focused.

2007-05-16  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/defaults/preferences/prefs.js: Set
	browser.sessionstore.resume_from_crash to false, to maintain
	sanity.

2007-05-16  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/overlay.js: New file. Just toggles the
	overlayLayer visibility when pressing Alt-F9.  Loads it with
	http://www.google.com/ig (Google Homepage).

	* compzilla/chrome/content/start.xul: Put an iframe in
	overlayLayer.

	* compzilla/src/compzillaControl.cpp (InitWindowState): Reenable
	adding existing windows at startup.

2007-05-16  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js (svc): Call ConfigureWindow in
	response to the configure event, if the window isn't
	override_redirect.  This fixes xterm.

	* compzilla/src/compzillaWindow.cpp (MapWindow): Avoid a terver
	roundtrip by just setting mAttr.map_state.
	(UnmapWindow): Ditto.
	(WindowConfigured): Always call ResetPixmap.

	* compzilla/src/compzillaControl.cpp (Filter): Call
	ConfigureWindow for windows which don't have a compzillaWindow.

	* compzilla/public/compzillaIControl.idl: Add bool
	overrideRedirect arg to SendConfigureNotify.

2007-05-15  Chris Toshok  <toshok@hungry.com>

	* compzilla/Makefile.am (component_DATA): remove
	compzillaWindowManager.js from the list of files to install.

	* compzilla/chrome/content/frame.js (frame.destroy): if the
	destroyed frame was the one that was focused, clear the ref so it
	can be collected.

	* compzilla/src/compzillaControl.h (class compzillaControl):