@@ -6,9 +6,6 @@ function CompzillaWindowContent (nativewin) {
 
     var content = document.getElementById ("windowContent").cloneNode (true);
 
-    // Allow the content to be focus()'d
-    content.tabIndex = "1";
-
     content._nativewin = nativewin;
     content.getNativeWindow = function () { return content._nativewin; }
 
