@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <canvas id="windowContent" mousethrough="never" />
+        <canvas id="windowContent" tabindex="1" />
 
 	<div id="dockFrame" class="dockFrame" mousethrough="never">
             <div id="windowContentBox">
