@@ -112,9 +112,12 @@ body {
 
 #windowContent {
 	background: #ffffff;
-	tab-index: 1;
 	width: 100%;
 	height: 100%;
+}
+
+#windowContent:focus {
+        outline-width: 0;
 }
 
 #debugLog {
